--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         run: xcodebuild -scheme display_switch -configuration release -derivedDataPath .build build
-      - uses: actions/upload-artifact@v1
-        with:
-          name: mac
-          path: MacOS/.build/Build/Products/release/display_switch
 
   build_windows:
     runs-on: windows-latest
@@ -32,7 +28,10 @@ jobs:
         run: cargo build --verbose --release
       - name: Run tests
         run: cargo test --verbose
-      - uses: actions/upload-artifact@v1
+      - uses: eine/tip@master
         with:
-          name: windows
-          path: Windows/target/release/display_switch.exe
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            Windows/target/release/display_switch.exe
+            MacOS/.build/Build/Products/release/display_switch
+            README.md
